feat(ci): add multi-platform testing, type checking, and release automation
- Expanded GitHub Actions workflows to test on Ubuntu, Windows, and macOS
- Added type-checking job with MyPy and UV caching
- Added test-install job to verify package installation across platforms
- Enhanced release workflow with pre-release testing, building executables, and automated GitHub releases
- Added scripts for build, test, install, and release to streamline development
- Included PyInstaller spec for building standalone binaries
- Updated README and added DEVELOPMENT.md with detailed development and release instructions
- Added comprehensive tests for offline module components
- Added pyinstaller to dev dependencies

This update significantly improves CI/CD robustness, cross-platform support, and developer experience.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.0.0",
     "pyupgrade>=3.19.0",
+    "pyinstaller>=6.0.0",
     # "types-tenacity", # Tenacity should be typed directly
     # "types-python-fire", # Fire should be typed directly or stubs handled differently
     "types-aiofiles", # Stubs for aiofiles
