--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -44,12 +44,14 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        os: [ubuntu-latest]
-      fail-fast: true
+        os: [ubuntu-latest, windows-latest, macos-latest]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -67,6 +69,9 @@ jobs:
       - name: Install test dependencies
         run: uv pip install --system --upgrade pip hatchling hatch-vcs ".[test]"
 
+      - name: Install Playwright browsers
+        run: playwright install chromium
+
       - name: Run tests with Pytest
         run: hatch run test:test-cov --cov-report=xml
 
@@ -76,13 +81,43 @@ jobs:
           name: coverage-${{ matrix.python-version }}-${{ matrix.os }}
           path: coverage.xml
 
-  build:
-    name: Build Distribution
-    needs: test
+  type-check:
+    name: Type Checking
+    needs: quality
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "latest"
+          python-version: "3.12"
+          enable-cache: true
+
+      - name: Install dependencies
+        run: uv pip install --system --upgrade pip hatchling hatch-vcs ".[dev]"
+
+      - name: Run type checking
+        run: hatch run lint:typing
+
+  build:
+    name: Build Distribution
+    needs: [test, type-check]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -97,14 +132,54 @@ jobs:
           enable-cache: true
 
       - name: Install build tools
-        run: uv pip install build hatchling hatch-vcs
+        run: uv pip install --system build hatchling hatch-vcs
 
       - name: Build distributions
         run: uv run python -m build --outdir dist
+
+      - name: Verify distribution files
+        run: |
+          ls -la dist/
+          test -n "$(find dist -name '*.whl')" || (echo "Wheel file missing" && exit 1)
+          test -n "$(find dist -name '*.tar.gz')" || (echo "Source distribution missing" && exit 1)
 
       - name: Upload distribution artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
           path: dist/
-          retention-days: 5 
+          retention-days: 5
+
+  test-install:
+    name: Test Installation
+    needs: build
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.10", "3.11", "3.12"]
+      fail-fast: false
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Download distribution artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+          path: dist/
+
+      - name: Install wheel
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install dist/*.whl
+
+      - name: Test CLI installation
+        run: |
+          d361-offline --help
+
+      - name: Test package import
+        run: |
+          python -c "import d361; print(d361.__version__)" 
